# self-development

./: README.md  pyproject.toml
src/self_development/: crew.py  main.py
src/self_development/config/: agents.yaml  tasks.yaml
